RTL - QA - fix status bar location when menu is collapsed

--- a/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
+++ b/src/app/@ansyn/ansyn/ansyn/ansyn.component.less
@@ -121,6 +121,10 @@
 			div.status {
 				left: unset;
 				right: @menu-width;
+				&.expand {
+					left: unset;
+					right: 0;
+				}
 			}
 		} // div.app
 	} // rtl
